# 2026_ROKEY_B_1

./: .gitignore  10_busbar_assembly.py  10_thread_controller.py  11_nut_screw_kinematic.py  1_load_usd_standalone.py  4_pick_place.py  5_pick_and_place_color.py  6_connector_insertion.py  7_connector_insertion_real copy.py  7_connector_insertion_real.py  8_bolt_nut_screw.py  9_nut_grasp_experiment.py  README.md  color_detector.py  convert_step.py  inspect_connector.py  inspect_step_usd.py  probe_assets.py  render_parts.py
Collected_World0/: .collect.mapping.json  World0.usd
Collected_World0/SubUSDs/: 12.8V60Ah-BT.usd  Materials.usd  basic_block.usd  factory_bolt_m16_tight.usd  instanceable_meshes_1.usd  m0609_camera.usd  red_block.usd
Collected_m0609_camera/: .collect.mapping.json  m0609_camera.usd
Collected_m0609_gripper/: clock1.usd  m0609_gripper.usd
battery_pack/: README.md  busbar_mesh.py  make_busbar_usd.py  make_module_usd.py  module_vda355.usda
bp2/: make_busbar_tray_usd.py
bp3/assemblies/: battery_pack.usda  busbar_tray.usda
bp3/components/: busbar_long.usda  busbar_short.usda
bp_1/: make_battery_pack_usd.py  make_module_usd.py
bp_chage_model/assemblies/: battery_pack.usda
bp_chage_model/components/: busbar_long.usda  busbar_short.usda  module_vda355.usda
bp_chage_model/senes/: cell_main.usda  make_cell_main_usd.py
connector_assets/: 2004563216.usd  2138141106.usd  2138150106.usd  2280060001.usd
connector_assets/step/: 2004563216.stp  2138141106.stp  2138150106.stp  2280060001.stp
isaacpjt/M0609/: assembly.py  execute_isaac.py
perception_prototype/: .gitignore  camera_geometry.py  detection.py
perception_prototype/README/: detection_README.md
perception_prototype/experiments/: test_variants.py
perception_prototype/experiments/hough_circle_approach/: depth_estimation.py  pose_estimation.py  vision_node.py
perception_prototype/training/: README.md  colab_fast_upload_train.ipynb  colab_train.ipynb  colab_upload_train.ipynb  make_colab_bundle.py  prepare_dataset.py  train_segmentation.py
src/: EV_battery_tray_6pack_3x2_transposed.usda  EV_battery_tray_6pack_World0_2_aligned.usd
src/amr_node/: package.xml  setup.py
src/amr_node/amr_node/: amr_node.py
src/arm_node/: package.xml  setup.cfg  setup.py
src/arm_node/arm_node/: arm_node.py  arm_node_scan_test.py
src/arm_node/arm_node/data/: nut_fasten_trajectory.json
src/arm_node/scripts/: fix_battery_pack_kinematic.py  fix_battery_pack_kinematic_result.txt  record_nut_fasten_trajectory.py  setup_ros2_arm_bridge.py
src/behavior_node/: package.xml  setup.cfg  setup.py
src/behavior_node/behavior_node/: behavior_node.py
src/dummy_executor_node/: package.xml  setup.cfg  setup.py
src/dummy_executor_node/dummy_executor_node/: dummy_executor_node.py
src/fleet_manager_node/: package.xml  setup.cfg  setup.py
src/fleet_manager_node/fleet_manager_node/: fleet_manager_node.py
src/fms_bringup/: package.xml  setup.cfg  setup.py
src/fms_bringup/launch/: fms_bringup.launch.py
src/fms_interfaces/: CMakeLists.txt  package.xml
src/fms_interfaces/action/: BusbarInsert.action  NutFasten.action
src/fms_interfaces/msg/: AmrGoal.msg  AmrStatus.msg  BusbarCommand.msg  BusbarGrasp.msg  BusbarResult.msg  BusbarTarget.msg  FastenCommand.msg  FastenResult.msg  FleetJob.msg  FleetReport.msg  NutPose.msg  StudPose.msg
src/fms_interfaces/srv/: ArmControl.srv  GetBoltPair.srv  GetGraspPose.srv
src/perception_node/: package.xml  setup.py
src/perception_node/launch/: perception_bag_test.launch.py
src/perception_node/perception_node/: camera_geometry.py  detector.py  overlay.py  perception_node.py
src/perception_node/scripts/: inspect_bag_frame.py
