<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_executor_node</name>
  <version>0.0.0</version>
  <description>GPU/Isaac Sim 없이 behavior_node·fleet_manager_node의 FSM을 검증하기 위한 더미 실행 노드</description>
  <maintainer email="poi3824@gmail.com">soo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>fms_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
