<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fms_bringup</name>
  <version>0.0.0</version>
  <description>FMS 연동 ROS2 시스템 아키텍처 전체 노드 launch 패키지</description>
  <maintainer email="poi3824@gmail.com">soo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>fleet_manager_node</exec_depend>
  <exec_depend>behavior_node</exec_depend>
  <exec_depend>amr_node</exec_depend>
  <exec_depend>arm_node</exec_depend>
  <exec_depend>perception_node</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
