<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_node</name>
  <version>0.0.0</version>
  <description>D455 시뮬 영상 기반 스터드/버스바/너트 위치 검출 (Hough Circle, YOLO)</description>
  <maintainer email="poi3824@gmail.com">soo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>fms_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
