<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_node</name>
  <version>0.0.0</version>
  <description>YOLO 세그멘테이션 기반 bolt/nut/busbar 검출 -> world 좌표 변환 -> 토픽 발행</description>
  <maintainer email="poi3824@gmail.com">soo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- scripts/inspect_bag_frame.py (오프라인 bag 프레임 디버그 도구) 전용 -->
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <!-- ultralytics, torch: rosdep 키가 아닌 pip 패키지. 별도로 pip install 필요 -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
